bobcat (2.20.02)

  * Using rang-based for loops where appropriate; minor cosmetic code changes

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 04 Jan 2012 13:20:29 +0100

bobcat (2.20.01)

  * Repaired bug in ReadLineBuf: object was incompletely initialized
    resulting in intermittendly occurring segfaults.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 04 Dec 2011 21:31:12 +0100

bobcat (2.20.00)

  * Redefined the implementations of the templates in bobcat/binops.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 03 Nov 2011 18:42:27 +0100

bobcat (2.19.01)

  * Repaired bug in BigInt::isqrt

  * BigInt's destructor called BN_clear, but should have called BN_free.
    Now repaired.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 10 Oct 2011 10:29:08 +0200

bobcat (2.19.00)

  * The 'BigInt' man-page was adapted to match the actual member and function
    prototypes mentioned in <bobcat/bigint>

  * Repaired a bug in size-test in BigInt::fromText

  * The 'binary_search' template was inadvertently dropped from Bobcat's
    classes and has been added again.

  * Environment variable name CPPFLAGS changed to CXXFLAGS

  * Updated README.class-setup overview of classes

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 22 Sep 2011 20:57:58 +0200

bobcat (2.18.00)

  * Added missing Stat::operator=(Stat const &other) member. 

  * FnWrap* calls removed from the bobcat library: they are now superfluous as
    compilers support lambda functions. The FnWrap* classes remain available.

  * George Danchev observed that static const numeric datamembers (e.g.,
    size_t) using in-class initialization values cause compilation errors when
    all optimizations are switched off (-O0). These static const data members
    were replaced by enum values.

  * Added IfElse<bool, TrueType, FalseType> and LpromotesR<LeftType,
    RightType> class templates to bobcat/typetrait

  * The arithmetic operator function templates defined in bobcat/binops now