@@ -233,9 +233,18 @@ provided by bf(man -e bobcat manipulators).
     child processes. nl()
     Manpage(process)
 
+    bf(FBB::PtrIter): Input iterator whose dereferenced value returns a
+    pointer rather than a reference to an element. Also offers: a tt(ptrIter)
+    function template. nl()
+    Manpage(ptriter)
+
     bf(FBB::Randbuffer): implements a bf(streambuf) generating random 
     numbers. nl()
-    (Manpage: bf(man -e bobcat randbuffer))
+    Manpage(randbuffer)
+
+    bf(FBB::Ranger): class creating ranges that are accepted by range-based
+    for-loops. Also offered: a tt(ranger) function template. nl()
+    Manpage(ranger)
 
     bf(FBB::ReadLineBuf): implements a bf(streambuf) using the Gnu
     tt(readline) library to allow editing an tt(std::istream)'s contents. nl()
@@ -689,6 +698,15 @@ END)
 
     bf(FBB::OneKey): Single keystroke input, not requiring `Return'.nl()
     Manpage(onekey)
+
+    bf(FBB::PtrIter): Input iterator whose dereferenced value returns a
+    pointer rather than a reference to an element. Also offers: a tt(ptrIter)
+    function template. nl()
+    Manpage(ptriter)
+
+    bf(FBB::Ranger): class creating ranges that are accepted by range-based
+    for-loops. Also offered: a tt(ranger) function template. nl()
+    Manpage(ranger)
 
     bf(FBB::RefCount): Base class implementing reference counting. nl()
     Manpage(refcount)
