@@ -1,3 +1,11 @@
+bobcat (2.21.00)
+
+  * Added new classes: Ranger and PtrIter, see their man-pages for details
+
+  * Repaired a flaw in hash/hash, appearing with g++-4.7
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 07 Jan 2012 13:27:57 +0100
+
 bobcat (2.20.02)
 
   * Using rang-based for loops where appropriate; minor cosmetic code changes
